# python_backend_test

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
airflow/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
airflow/management/commands/: update_currencies.py
airflow/migrations/: 0001_initial.py  0002_alter_searchresult_items.py  0003_alter_searchresult_items.py
airflow/templates/airflow/: home.html
provider_a/: apps.py  tests.py  urls.py  views.py
provider_b/: apps.py  tests.py  urls.py  views.py
python_backend_test/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
